--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^6.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.1",
@@ -18,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
     "markdown-renderer": "^1.0.1",
+    "motion": "^12.23.12",
     "next": "15.4.5",
     "obs": "^1.0.2",
     "ogl": "^1.0.11",
