--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.0",
+    "@next/third-parties": "^15.5.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -21,7 +22,7 @@
     "lucide-react": "^0.536.0",
     "markdown-renderer": "^1.0.1",
     "motion": "^12.23.12",
-    "next": "15.4.5",
+    "next": "^15.5.0",
     "obs": "^1.0.2",
     "ogl": "^1.0.11",
     "react": "19.1.0",
